--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="btn_label_command_control">Contrôle</string>
     <string name="btn_label_command_parcels">Parcelles</string>
     <string name="btn_list_info">Image affichage infos parcelle</string>
+    <string name="btn_take_picture">Prendre une Photo</string>
 
     <!-- Titles -->
     <string name="title_activity_add">Ajout parcelle</string>
